unpackaged/main/default/objects/Education__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <label>Additional Notes</label>
    <length>225</length>
    <type>Text</type>
</CustomField>