unpackaged/main/default/objects/Education__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <label>Campus</label>
    <length>225</length>
    <type>Text</type>
</CustomField>