unpackaged/main/default/objects/Education__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>Degree</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A.A.S.</fullName>
            </value>
            <value>
                <fullName>B.A.</fullName>
            </value>
            <value>
                <fullName>B.F.A.</fullName>
            </value>
            <value>
                <fullName>B.S.</fullName>
            </value>
            <value>
                <fullName>J.D.</fullName>
            </value>
            <value>
                <fullName>M.A.</fullName>
            </value>
            <value>
                <fullName>M.B.A.</fullName>
            </value>
            <value>
                <fullName>M.D.</fullName>
            </value>
            <value>
                <fullName>M.F.A.</fullName>
            </value>
            <value>
                <fullName>M.P.A.</fullName>
            </value>
            <value>
                <fullName>M.P.H.</fullName>
            </value>
            <value>
                <fullName>M.S.</fullName>
            </value>
            <value>
                <fullName>M.S.W.</fullName>
            </value>
            <value>
                <fullName>MDiv</fullName>
            </value>
            <value>
                <fullName>Ph.D.</fullName>
            </value>
            <value>
                <fullName>B.S.N.</fullName>
                <isActive>false</isActive>
                <label>B.S.N.</label>
            </value>
            <value>
                <fullName>M.L.S.</fullName>
                <isActive>false</isActive>
                <label>M.L.S.</label>
            </value>
            <value>
                <fullName>M.S.N.</fullName>
                <isActive>false</isActive>
                <label>M.S.N.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>