unpackaged/main/default/objects/Education__c/fields/Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Institution_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institution Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Category__c</field>
            <operation>equals</operation>
            <value>School</value>
        </filterItems>
        <infoMessage>&quot;Please select an Account with Category = School.&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Educations</relationshipLabel>
    <relationshipName>Educations</relationshipName>
    <type>Lookup</type>
</CustomField>