unpackaged/main/default/objects/Education__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <label>Major</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting; Psychology</fullName>
            </value>
            <value>
                <fullName>American Studies; Women and Gender Studies</fullName>
            </value>
            <value>
                <fullName>Art History; Fine Arts; Judaic Studies; Near Eastern Studies</fullName>
            </value>
            <value>
                <fullName>Art History; French</fullName>
            </value>
            <value>
                <fullName>Astronomy; Political Science</fullName>
            </value>
            <value>
                <fullName>Biology; Economics</fullName>
            </value>
            <value>
                <fullName>Biology; Psychology</fullName>
            </value>
            <value>
                <fullName>Business; Education</fullName>
            </value>
            <value>
                <fullName>Chemistry; International Relations; Political Science</fullName>
            </value>
            <value>
                <fullName>Classics; Pre-Med</fullName>
            </value>
            <value>
                <fullName>Cognitive Science; Linguistics; Russian</fullName>
            </value>
            <value>
                <fullName>Computer Science; Economics</fullName>
            </value>
            <value>
                <fullName>Computer Science; Electrical Engineering</fullName>
            </value>
            <value>
                <fullName>Computer Science; Fine Arts</fullName>
            </value>
            <value>
                <fullName>Computer Science; Physics</fullName>
            </value>
            <value>
                <fullName>Dance; Women&#39;s Studies</fullName>
            </value>
            <value>
                <fullName>Economics; Government</fullName>
            </value>
            <value>
                <fullName>Economics; Japanese</fullName>
            </value>
            <value>
                <fullName>Economics; Political Science</fullName>
            </value>
            <value>
                <fullName>Economics; Psychology</fullName>
            </value>
            <value>
                <fullName>Education; English</fullName>
            </value>
            <value>
                <fullName>Education; Hebrew; Rabbinical Studies</fullName>
            </value>
            <value>
                <fullName>Education; Jewish Studies</fullName>
            </value>
            <value>
                <fullName>Education; Psychology</fullName>
            </value>
            <value>
                <fullName>English; History</fullName>
            </value>
            <value>
                <fullName>English; Jewish Studies</fullName>
            </value>
            <value>
                <fullName>English; Linguistics</fullName>
            </value>
            <value>
                <fullName>English; Philosophy</fullName>
            </value>
            <value>
                <fullName>English; Political Science</fullName>
            </value>
            <value>
                <fullName>English; Politics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>