unpackaged/main/default/objects/Education__c/fields/Major_New__c.field-meta.xml
<CustomField>
    <fullName>Major_New__c</fullName>
    <label>Major</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Aerospace Engineering</fullName>
            </value>
            <value>
                <fullName>African Studies</fullName>
            </value>
            <value>
                <fullName>American Literature</fullName>
            </value>
            <value>
                <fullName>American Studies</fullName>
            </value>
            <value>
                <fullName>Anthropology</fullName>
            </value>
            <value>
                <fullName>Archaeology</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Art History</fullName>
            </value>
            <value>
                <fullName>Arts Management</fullName>
            </value>
            <value>
                <fullName>Asian Studies</fullName>
            </value>
            <value>
                <fullName>Astronomy</fullName>
            </value>
            <value>
                <fullName>Bible Studies</fullName>
            </value>
            <value>
                <fullName>Bioanthropology</fullName>
            </value>
            <value>
                <fullName>Biochemistry</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Biomedical Engineering</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Business Administration</fullName>
            </value>
            <value>
                <fullName>Chemical Engineering</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Child Development</fullName>
            </value>
            <value>
                <fullName>Child Therapy</fullName>
            </value>
            <value>
                <fullName>Civil and Environmental Engineering</fullName>
            </value>
            <value>
                <fullName>Civil Engineering</fullName>
            </value>
            <value>
                <fullName>Classics</fullName>
            </value>
            <value>
                <fullName>Cognitive Science</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Communication Sciences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>