unpackaged/main/default/objects/Education__c/fields/Minor__c.field-meta.xml
<CustomField>
    <fullName>Minor__c</fullName>
    <label>Minor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Creative Writing</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Jewish Studies</fullName>
            </value>
            <value>
                <fullName>Judaic Studies</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Philosophy</fullName>
            </value>
            <value>
                <fullName>Religious Studies</fullName>
            </value>
            <value>
                <fullName>Sociology</fullName>
            </value>
            <value>
                <fullName>Hebrew</fullName>
            </value>
            <value>
                <fullName>French &amp; History</fullName>
                <isActive>false</isActive>
                <label>French &amp; History</label>
            </value>
            <value>
                <fullName>Hebrew &amp; Judaic Studies</fullName>
                <isActive>false</isActive>
                <label>Hebrew &amp; Judaic Studies</label>
            </value>
            <value>
                <fullName>Music &amp; Religious Studies</fullName>
                <isActive>false</isActive>
                <label>Music &amp; Religious Studies</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>